Ersten Entwurf hinzugefügt

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <li class="active"><a href="index.html">Einführung</a></li>
               <li><a href="anleitung.html">Anleitung</a></li>
               <li><a href="hintergrund.html">Hintergrund</a></li>
+              <li><a href="entwurf.html">Entwürfe</a></li>
               <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
          </div><!--/.nav-collapse -->
