--- a/kontakt.html
+++ b/kontakt.html
@@ -60,6 +60,7 @@
               <li><a href="index.html">Einführung</a></li>
               <li><a href="anleitung.html">Anleitung</a></li>
               <li><a href="hintergrund.html">Hintergrund</a></li>
+              <li><a href="entwurf.html">Entwürfe</a></li>
               <li class="active"><a href="kontakt.html">Kontakt</a></li>
             </ul>
          </div><!--/.nav-collapse -->
