Neuen Dorfplanentwurf hinzufügen

--- a/entwurf.html
+++ b/entwurf.html
@@ -73,7 +73,8 @@
       <div class="jumbotron">
         Hier sind die unterschiedlichen Entwürfe als PDF-Dateien abgelegt. Bitte beachten, dass man aufgrund der Größe in das Dokument zoomen muss, um etwas lesen zu können.
         <ul>
-          <li><a href="maps/dorfplan_V02E_44b1d02a.pdf">Aktuelle Version 2</a></li>
+          <li><a href="maps/dorfplan_V03E_8843fdde.pdf">Aktuelle Version 3</a></li>
+          <li><a href="maps/dorfplan_V02E_44b1d02a.pdf">Version 2</a></li>
           <li><a href="maps/dorfplan_V01E_626a812.pdf">Version 1</a></li>
         </ul>
       
